# visual-sort

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  rendersort
src/: .a.out  a.out  algorinthms.cpp  algorithms-basic.cpp  algorithms.cpp  algtest  algtest.cpp  color-test.cpp  colors.hpp  globals.hpp  main.cpp  mergesort  mergesort.cpp  qsort.hpp  sort-test.cpp  timsort  timsort.cpp
